--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,7 +17,8 @@
         </a>
       {% endif %}
     </nav>
-    <span>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}. All rights reserved.</span>
+    <span>&copy; {{ site.time | date: '%Y' }} {{ site.title | escape }}. 苏ICP20039002.</span>
+    <h1>人生漫漫无知己，相逢即是有缘人</h1>
   </div>
 </footer>
 <script async src="{{ "/assets/js/bundle.js" | relative_url }}"></script>
